# professors

./: .coveragerc  .gitignore  Dockerfile  ProfessorsAPI.postman_collection.json  README.md  pyproject.toml
adapters/api/routes/: professors.py
adapters/api/schemas/: professor_schemas.py
professors/: config.py  dependencies.py  main.py
professors/adapters/api/: auth.py
professors/adapters/api/routes/: classes.py  courses.py  graduations.py  lessons.py  professors.py
professors/adapters/api/schemas/: class_schemas.py  course_schemas.py  graduation_schemas.py  lesson_schemas.py  professor_schemas.py
professors/adapters/database/: database.py  graduation_repository.py  models.py  professor_repository.py
professors/core/domain/: graduation_models.py  professor_models.py
professors/core/ports/: graduation_repository_port.py  professor_repository_port.py
professors/core/services/: graduation_service.py  professor_service.py
tests/: conftest.py  test_main.py
tests/adapters/api/: test_graduations.py  test_professors.py
tests/core/: test_graduation_service.py  test_professor_service.py
