[tool.poetry]
name = "professors"
version = "0.1.0"
description = "Professors microservice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "professors"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
uuid = "^1.30"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"  # Essencial para mocks
pytest-cov = "^5.0.0"    # Para coverage
httpx = "^0.27.0"        # Necessário para o TestClient do FastAPI

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"